# bluecoin

./: .cirrus.yml  CONTRIBUTING.md  Makefile.am  Makefile.in  README.md  SECURITY.md  aclocal.m4  configure  configure.ac  libbluecoinconsensus.pc.in
.github/: PULL_REQUEST_TEMPLATE.md
.tx/: config
autom4te.cache/: output.1  output.3  requests  traces.0  traces.1  traces.2
build_msvc/: .gitignore  README.md  bluecoin.sln  bluecoin_config.h.in  libsecp256k1_config.h  msvc-autogen.py  vcpkg.json
contrib/: README.md  valgrind.supp
depends/: README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  benchmarking.md  bips.md  bluecoin-conf.md  build-android.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  guix.md  i2p.md  init.md  managing-wallets.md  multisig-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  tracing.md  translation_process.md  (+2 more)
doc/man/: Makefile.am  Makefile.in  bluecoin-cli.1  bluecoin-qt.1  bluecoin-tx.1  bluecoin-util.1  bluecoin-wallet.1  bluecoind.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.in  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  (+113 more)
(+1070 files in other folders)
