dist_man1_MANS=

if BUILD_BLUECOIND
  dist_man1_MANS+=bluecoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=bluecoin-qt.1
endif

if BUILD_BLUECOIN_CLI
  dist_man1_MANS+=bluecoin-cli.1
endif

if BUILD_BLUECOIN_TX
  dist_man1_MANS+=bluecoin-tx.1
endif

if BUILD_BLUECOIN_UTIL
  dist_man1_MANS+=bluecoin-util.1
endif

if ENABLE_WALLET
if BUILD_BLUECOIN_WALLET
  dist_man1_MANS+=bluecoin-wallet.1
endif
endif
